[tool.poetry]
name = "muesliswap-dex-analytics"
version = "0.1.0"
description = ""
authors = ["MuesliSwap Team <contact@muesliswap.com>"]
license = "GNU GPL 3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
cardano-python-utils = {git = "https://github.com/MuesliSwapTeam/muesliswap-cardano-python-utils.git", rev = "9ba6d35b06878e5951e8c44106314005e4297255"}
sqlalchemy = ">=2.0"
flask = "^3.1.0"
flask-cors = "^5.0.0"
flask-caching = "^2.3.0"
flask-restx = "^1.3.0"
gunicorn = "^23.0.0"
psycopg = {extras = ["binary"], version = "^3.2.4"}
orjson = "^3.10.15"
pyahocorasick = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-durations = "^1.3.1"
pytest-subtests = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
